<resources>
    <string name="app_name">Kphisics</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="tools_bottom_nav_item_title">Tools</string>
    <string name="projects_bottom_nav_title">Projects</string>
    <string name="no_projects_tv">Your Projects folder is empty. Press \'+\' to create a new Project.</string>
    <string name="tools">Tools</string>
    <string name="share">Share</string>
    <string name="communicate">Communicate</string>
    <string name="info">Info</string>
    <string name="info_text">lorem ipsum dolor</string>
    <string name="title_light">Light</string>
    <string name="title_acoustic_intensity">Acoustic Intensity</string>
    <string name="title_sound_tone">Sound Tone</string>
    <string name="title_accelerometer">Accelerometer</string>
    <string name="title_accelerometer_x">Accelerometer (X)</string>
    <string name="title_accelerometer_y">Accelerometer (Y)</string>
    <string name="title_accelerometer_z">Accelerometer (Z)</string>
    <string name="title_magnetic_field">Magnetic Field</string>
    <string name="title_unknown">Unknown</string>
    <string name="empty_projects_image">Empty image</string>
    <string name="waiting_for_sensor">waiting for sensor:</string>
</resources>
