<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@id/nav_host_fragment"
            android:icon="@mipmap/ic_projects"
            android:title="@string/projects_bottom_nav_title"/>

        <item
            android:id="@id/toolsFragment"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/tools" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@id/shareFragment"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@id/infoFragment"
                android:icon="@android:drawable/ic_dialog_info"
                android:title="@string/info" />
        </menu>
    </item>

</menu>
